--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>DailyInsight | keeping Connections Alive</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,7 +35,7 @@
         <section class="container">
             <div class="row">   
                 <div class="row-item">
-                    <div class="align-item">
+                    <div class="text-center">
                         <div class="call-action">
                             <h1>Welcome to <span>DailyInsight</span></h1>
                             <h3>We Keep <span>Connections Alive</span></h3>
@@ -52,7 +52,7 @@
                         </div>
                     </div>      
                 </div>
-                <div class="row-item">
+                <div class="row-item-img">
                     <img src="img/showcase.webp" alt="" srcset="">
                 </div>
             </div>
