--- a/Getstarted.html
+++ b/Getstarted.html
@@ -9,7 +9,7 @@
 
     <body>
         <section>
-            <div class="row">
+            <div class="card">
                 <div class="big-size">
                     <h1 class="middi">
                         Sign In
@@ -20,7 +20,7 @@
                     <br>
                         <input type="password" name="password" placeholder="password" required>
                     <br>
-                    <div class="main">   
+                    <div  class="main">   
                         <a href="#" >Login Now</a>
                     </div>
                 </form>        
