--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -9,7 +9,7 @@
 
     <body>
         <section>
-            <div class="row">
+            <div class="card">
                 <h1 class="big-size">
                   Reset Password
                 </h1>
@@ -18,7 +18,7 @@
                 </form>
                 <div class="main">   
                     <a href="#">Reset</a>
-                </div>        
+                </div>       
                 <div class="content"> 
                     <a href="go_back.html">Go Back</a>
                 </div>    
