--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <body>
 
         <section>
-            <div class="row">
+            <div class="card">
                 <div class="big-size">
                     <h1 class="middi">
                         Sign In
@@ -18,15 +18,15 @@
                 </div>
                 <form>
                     <h2>
-                        <input type="name" placeholder="Username" class="offspring">
+                        <input type="name" name="name" placeholder="Username" class="offspring">
                     </h2>
                     <h2>
-                        <input type="password" placeholder="password" class="offspring">
+                        <input type="password" name="password" placeholder="password" class="offspring">
                     </h2>
                 </form>
                 <br>
                 <div class="main">   
-                    <a href="#" >Login Now</a>
+                    <a href="#">Login Now</a>
                 </div>    
                 <br>   
                 <div class="content">    
