--- a/register.html
+++ b/register.html
@@ -24,16 +24,16 @@
                     <br>
                         <input type="tel" name="tel" placeholder="Phone No" required>
                     <br>
-                        <input type="email"  name="email" placeholder="Email" required>
+                        <input type="email" name="email" placeholder="Email" required>
                     <br>
-                        <input type="name" name="Referer" placeholder="Referer" required>
+                        <input type="name" name="Referer" placeholder="Referer">
                     <br>
                         <input type="password"  name="password"  placeholder="Password" required>
                     <br>
-                        <input type="password"  name="password" placeholder="Confirm Password" required>
+                        <input type="password" name="password" placeholder="Confirm Password" required>
                     <br>
                     <div class="main">  
-                        <a href="#" >Register</a> 
+                        <a href="#">Register</a>
                     </div>   
                 </form>
                 <div class="content">
